tests/ui/rename/rename_unexpected_lit_type.stderr
error: unexpected literal type `byte string`
 --> $DIR/rename_unexpected_lit_type.rs:5:24
  |
5 |     #[shorthand(rename(b"binary"))]
  |                        ^^^^^^^^^
